MuMIn package news:

Version: 1.43.9 (2019-06-21)
(fixed) r.squaredGLMM failed when the interaction components in RE part of the 
    model formula were not in order of appearance (found by Gabriel Baud-Bovy)

Version: 1.43.8 (2019-04-15)
(fixed) methods for 'gamlss' (reported by Andras Farkas)

Version: 1.43.6 (2019-04-08)
(fixed) if conditions with "length > 1 in coercion to logical" error produced by
    the new Rcheck.
(fixed) updated 'tests' to make up for 'spautolm' moved from 'spdep' to 
    'spatialreg'.

Version: 1.43.4 (2019-04-04)
(fixed) minor changes to the quasi-likelihood function

Version: 1.43.3 (2019-03-19)
(added) methods for 'gamlss' (suggested by Anne Loosen)
(fixed) QIC,quasiLik: now gives results compatible with those of 
    wgeesel::QIC.gee.

Version: 1.43.2 (2019-03-16)
'sw' (for "Sum of Weights") is now preferred to 'importance' (which is 
    still available, but is going to be deprecated in future). This is because
    of the controversies about SoW being a valid measure of actual variable 
    importance.
[p]dredge: max. number of predictors is now correctly calculated (depending on 
    the number of variants)

Version: 1.43.1 (2019-03-06)
(added) new model structure for unmarkedFitGDS (gdistsamp) with alpha parameter
   (thanks to Alba Estrada)

Version: 1.43.0 (2019-02-28)
(fixed) in QICu, the number of parameters was mistaken for number of 
    observations (reported by Richard Fredrickson)
(added) some methods for wgeesel::wgee objects.

Version: 1.42.5 (2019-01-02)
r.squaredGLMM: added the argument "envir" which is passed to `.nullFitRE`. This 
    can be used in case of issues with model data not being found (reported by
    Eliot McIntire)

Version: 1.42.4 (2018-12-05)
(fixed) r.squaredGLMM.merMod: error when the function was called in an 
    environment different than .GlobalEnv (spotted by a certain Martin on 
    Stackoverflow)

Version: 1.42.3 (2018-07-31)