@@ -79,18 +79,14 @@ component model classes (except when all component models are of class
 \code{lm}).
 
 The package \pkg{MuMIn} includes \code{predict} methods for \code{lme},
-\code{gls} and \code{lmer} (\pkg{lme4}), all of which can calculate standard
-errors of the predictions (with \code{se.fit = TRUE}). The former two enhance
-the original predict methods from package \pkg{nlme}, and with \code{se.fit =
-FALSE} they return identical result. \pkg{MuMIn}'s versions are always used in
-averaged model predictions (so it is possible to predict with standard errors),
-but from within global environment they will be found only if \pkg{MuMIn} is
-before \pkg{nlme} on the \link[=search]{search list} (or directly extracted from
-namespace as \code{MuMIn:::predict.lme}).
-
-\code{predict} method for \code{mer} models currently can only calculate values
-on the outermost level (equivalent to \code{level = 0} in
-\code{\link{predict.lme}}).
+and \code{gls} that calculate standard errors of the predictions
+(with \code{se.fit = TRUE}). They enhance the original predict methods from
+package \pkg{nlme}, and with \code{se.fit = FALSE} they return identical result.
+\pkg{MuMIn}'s versions are always used in averaged model predictions (so it is
+possible to predict with standard errors), but from within global environment
+they will be found only if \pkg{MuMIn} is before \pkg{nlme} on the
+\link[=search]{search list} (or directly extracted from namespace as
+\code{MuMIn:::predict.lme}).
 }
 
 \author{Kamil Barto\enc{ń}{n}}
